po: update po/hu_HU/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/event.po
+++ b/po/hu_HU/event.po
@@ -5,15 +5,15 @@
 # Translators:
 # András Kéri <keri.andras@gmail.com>, 2013
 # Bakk László <laciagazda@gmail.com>, 2013
-# Mathieu Lutfy <mathieu@bidon.ca>, 2014
+# Mathieu Lu <mathieu@bidon.ca>, 2014
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2016
+# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2017
 # Zoltán Várady <zoltan@farm.co.hu>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 18:33+0000\n"
+"PO-Revision-Date: 2017-01-10 16:10+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -484,7 +484,7 @@ msgstr "Több hasonló beállítású esemény létrehozására használhatja  a
 
 #: CRM/Event/Form/ManageEvent/EventInfo.php
 msgid "From Template"
-msgstr "Honnan sablon"
+msgstr "Sablonból"
 
 #: CRM/Event/Form/ManageEvent/EventInfo.php
 msgid "Complete Description"
@@ -2680,7 +2680,7 @@ msgid ""
 "'Continue' to be added to the WAIT LIST for this event</span>. If space "
 "becomes available you will receive an email with a link to a web page where "
 "you can complete your registration."
-msgstr "Kérem ellenőrizze az alább található információkat. <span class=\"bold\">Utána kattintson a 'Folytatás' gombra a VÁRÓLISTÁHOZ történő hozzáadásra</span>. Ha felszabadul egy hely egy értesítő e-mailt kap egy linkkel arra a weboldalra ahol befejezheti a regisztrációját."
+msgstr "Kérem ellenőrizze az alább található információkat. <span class=\"bold\">Utána kattintson a 'Tovább' gombra a VÁRÓLISTÁHOZ történő hozzáadásra</span>. Ha felszabadul egy hely egy értesítő e-mailt kap egy linkkel arra a weboldalra ahol befejezheti a regisztrációját."
 
 #: templates/CRM/Event/Form/Registration/Confirm.tpl
 msgid ""
@@ -2688,7 +2688,7 @@ msgid ""
 "registration. <span class=\"bold\">Once approved, you will receive an email "
 "with a link to a web page where you can complete the registration "
 "process.</span>"
-msgstr "Kérem ellenőrizze az alább található információkat. Utána kattintson a 'Folytatás' gombra a regisztráció elküldéséhez. <span class=\"bold\">Ha jóváhagyták, egy értesítő e-mailt kap egy linkkel arra a weboldalra ahol befejezheti a regisztrációját.</span>"
+msgstr "Kérem ellenőrizze az alább található információkat. Utána kattintson a 'Tovább' gombra a regisztráció elküldéséhez. <span class=\"bold\">Ha jóváhagyták, egy értesítő e-mailt kap egy linkkel arra a weboldalra ahol befejezheti a regisztrációját.</span>"
 
 #: templates/CRM/Event/Form/Registration/Confirm.tpl
 msgid ""
@@ -2706,13 +2706,13 @@ msgstr "Kattintson  <strong>%1</strong> gombra a Google Pénztárcához, ahol ki
 msgid ""
 "Click the <strong>Continue</strong> button to checkout to %1, where you will"
 " select your payment method and complete the registration."
-msgstr "Kattintson a <strong>Folytatás</strong> gombra a %1 pénztárhoz, ahol kiválaszthatja a fizetési módot és befejezheti a regisztrációt. "
+msgstr "Kattintson a <strong>Tovább</strong> gombra a %1 pénztárhoz, ahol kiválaszthatja a fizetési módot és befejezheti a regisztrációt. "
 
 #: templates/CRM/Event/Form/Registration/Confirm.tpl
 msgid ""
 "Otherwise, click the <strong>Continue</strong> button below to complete your"
 " registration."
-msgstr "Egyébként, kattintson a <strong>Folytatás</strong> gombra a regisztráció befejezésére. "
+msgstr "Egyébként, kattintson a <strong>Tovább</strong> gombra a regisztráció befejezésére. "
 
 #: templates/CRM/Event/Form/Registration/Confirm.tpl
 msgid ""
@@ -2720,7 +2720,7 @@ msgid ""
 "<strong>Continue</strong> button. Please click the button one time only. If "
 "you need to change any details, click the Go Back button below to return to "
 "the previous screen."
-msgstr "A regisztrációja nem folytatódik amíg nem kattint a  <strong>Folytatás</strong> gombra. Kérem csak egyszer nyomja meg a gombot. Ha bármely részletet meg kell változtatnia, kattintson a Vissza gombra alul az előző oldalra történő visszatéréshez."
+msgstr "A regisztrációja nem folytatódik amíg nem kattint a  <strong>Tovább</strong> gombra. Kérem csak egyszer nyomja meg a gombot. Ha bármely részletet meg kell változtatnia, kattintson a Vissza gombra alul az előző oldalra történő visszatéréshez."
 
 #: templates/CRM/Event/Form/Registration/DisplayProfile.tpl
 msgid "Participant 1"
@@ -2775,7 +2775,7 @@ msgid ""
 "Fill in your registration information on this page. If you are registering "
 "additional people, you will be able to enter their registration information "
 "after you complete this page and click &quot;Continue&quot;."
-msgstr "Töltse ki az oldalon a regisztrációs információkat. Ha további személyeket is szeretne regisztrálni, az ő regisztrációs információikat megadhatja miután kitöltötte ezt az oldalt és kattintson a &quot;Folytatás&quot; gombra."
+msgstr "Töltse ki az oldalon a regisztrációs információkat. Ha további személyeket is szeretne regisztrálni, az ő regisztrációs információikat megadhatja miután kitöltötte ezt az oldalt és kattintson a &quot;Tovább&quot; gombra."
 
 #: templates/CRM/Event/Form/Registration/ThankYou.tpl
 #: xml/templates/message_templates/event_offline_receipt_html.tpl
