--- a/po/hu_HU/common-components.po
+++ b/po/hu_HU/common-components.po
@@ -5,13 +5,13 @@
 # Translators:
 # András Kéri <keri.andras@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2016
+# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2017
 # Zoltán Reizinger <zreizinger@hdsnet.hu>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-10 09:03+0000\n"
+"PO-Revision-Date: 2017-01-10 15:49+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -1448,7 +1448,7 @@ msgid ""
 "Creating your own fundraising page is simple. Fill in some basic information"
 " below, which will allow you to manage your page and invite friends to make "
 "a contribution. Then click 'Continue' to personalize and announce your page."
-msgstr "Saját adomány gyűjtő oldal létrehozása egyszerű. Töltsön ki néhány alapvető információt lejjebb, amely lehetővé teszi az oldal kezelését és a barátainak a meghívását adományozásra. Majd kattintson a 'Folytatás' gombra az oldal személyessé tételére és bejelentésére. "
+msgstr "Saját adomány gyűjtő oldal létrehozása egyszerű. Töltsön ki néhány alapvető információt lejjebb, amely lehetővé teszi az oldal kezelését és a barátainak a meghívását adományozásra. Majd kattintson a 'Tovább' gombra az oldal személyessé tételére és bejelentésére. "
 
 #: templates/CRM/Contribute/Form/PCP/PCPAccount.tpl
 #: CRM/PCP/Form/Contribute.php CRM/PCP/Form/Event.php
