po: update po/hu_HU/pcp.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/pcp.po
+++ b/po/hu_HU/pcp.po
@@ -4,12 +4,12 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Szabo Attila <atekka@gmail.com>, 2013
-# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2016
+# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-10 10:49+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2017-01-10 15:53+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -603,7 +603,7 @@ msgid ""
 "Creating your own campaign page is simple. Fill in some basic information "
 "below, which will allow you to manage your page and invite friends to "
 "support you. Then click 'Continue' to personalize and announce your page."
-msgstr "Saját adomány gyűjtő oldal létrehozása egyszerű. Töltsön ki néhány alapvető információt lejjebb, amely lehetővé teszi az oldal kezelését és a barátainak a meghívását adományozásra. Majd kattintson a 'Folytatás' gombra az oldal személyessé tételére és bejelentésére. "
+msgstr "Saját adomány gyűjtő oldal létrehozása egyszerű. Töltsön ki néhány alapvető információt lejjebb, amely lehetővé teszi az oldal kezelését és a barátainak a meghívását adományozásra. Majd kattintson a 'Tovább' gombra az oldal személyessé tételére és bejelentésére. "
 
 #: templates/CRM/PCP/Page/PCP.hlp
 msgid ""
