po: update po/hu_HU/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/mailing.po
+++ b/po/hu_HU/mailing.po
@@ -7,13 +7,13 @@
 # Bakk László <laciagazda@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Szabo Attila <atekka@gmail.com>, 2013
-# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2016
+# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2017
 # Zoltán Reizinger <zreizinger@hdsnet.hu>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 18:28+0000\n"
+"PO-Revision-Date: 2017-01-10 15:53+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -643,13 +643,13 @@ msgstr "ZÁRJA KI ezen levelezési lista(ák) címzettjeit"
 msgid ""
 "You can continue later by clicking the 'Continue' action to resume working "
 "on it.<br />From <a href='%1'>Draft and Unscheduled Mailings</a>."
-msgstr "Folytathatja később a 'Folytatásra' kattintva a munka befejezésére. <br />A <a href='%1'>Piszkozat vagy nem ütemezett levelek</a> alatt."
+msgstr "Folytathatja később a 'Tovább' kattintva a munka befejezésére. <br />A <a href='%1'>Piszkozat vagy nem ütemezett levelek</a> alatt."
 
 #: CRM/Mailing/Form/Group.php CRM/Mailing/Form/Schedule.php
 #: CRM/Mailing/Form/Settings.php CRM/Mailing/Form/Test.php
 #: CRM/Mailing/Form/Upload.php
 msgid "Click the 'Continue' action to resume working on it."
-msgstr "Kattintson a 'Folytatásra'  a munka befejezésére."
+msgstr "Kattintson a 'Tovább'-ra  a munka befejezésére."
 
 #: CRM/Mailing/Form/Group.php CRM/Mailing/Form/Schedule.php
 #: CRM/Mailing/Form/Settings.php CRM/Mailing/Form/Test.php
@@ -726,7 +726,7 @@ msgid ""
 "Your mailing has been saved. You can continue later by clicking the "
 "'Continue' action to resume working on it.<br />From <a href='%1'>Draft and "
 "Unscheduled Mailings</a>."
-msgstr "A levelezése mentésre került. A 'Folytatás' gombra kattintva folytathatja a munkáját.  <br /> A <a href='%1'>Piszkozatok és nem ütemezett levelek</a> alat."
+msgstr "A levelezése mentésre került. A 'Tovább' gombra kattintva folytathatja a munkáját.  <br /> A <a href='%1'>Piszkozatok és nem ütemezett levelek</a> alat."
 
 #: CRM/Mailing/Form/Search.php CRM/Mailing/Selector/Browse.php
 msgid "SMS Name"
@@ -2021,7 +2021,7 @@ msgid ""
 "Click <strong>Continue Later</strong> if you're not ready to schedule or "
 "send this mailing. Click the <strong>Continue</strong> link from Unscheduled"
 " and Draft Mailings when you are ready to schedule or send it."
-msgstr "Kattintson a <strong> később folytatom </ strong> ra ha még nincs kész hogy beütemezzen vagy levelet küldjön erre a levelezőlistára. Kattintson a <strong> Folytatás </ strong> linkre a Nem ütemezett és Piszkozat leveleknél, ha készen áll arra hogy ütemezze vagy elküldje."
+msgstr "Kattintson a <strong> később folytatom </ strong> ra ha még nincs kész hogy beütemezzen vagy levelet küldjön erre a levelezőlistára. Kattintson a <strong>Tovább</ strong> linkre a Nem ütemezett és Piszkozat leveleknél, ha készen áll arra hogy ütemezze vagy elküldje."
 
 #: templates/CRM/Mailing/Form/Schedule.hlp
 msgid ""
