--- a/po/pl_PL/menu.po
+++ b/po/pl_PL/menu.po
@@ -15,7 +15,7 @@
 # Jarek Sawiuk <jsawiuk@gmail.com>, 2016
 # kalor <karol.krzyczkowski@gmail.com>, 2014-2015
 # Marcin Cytawa <marcin.cytawa@gmail.com>, 2012
-# Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2016
+# Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2016-2017
 # Michał Mach <michau@gmail.com>, 2013-2014
 # Dariusz Koryto <nowydako@gmail.com>, 2011
 # Piotr Kaczyński <www@skrzydla.lublin.pl>, 2015
@@ -26,8 +26,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-11 00:42+0000\n"
+"Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2173,7 +2173,7 @@ msgstr "Metody płatności"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Close Accounting Period"
-msgstr ""
+msgstr "Zamknij okres księgowy"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
@@ -2182,7 +2182,7 @@ msgstr "Konfiguracja CKEditor"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviCRM Resources"
-msgstr ""
+msgstr "CiviCRM Źródła"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
@@ -2218,7 +2218,7 @@ msgstr "Rozszerzenia"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "My Reports"
-msgstr ""
+msgstr "Moje raporty"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
