po: update po/hu_HU/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/report.po
+++ b/po/hu_HU/report.po
@@ -5,12 +5,12 @@
 # Translators:
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Szabo Attila <atekka@gmail.com>, 2013
-# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2016
+# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-10 07:58+0000\n"
+"PO-Revision-Date: 2017-01-10 16:06+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -268,11 +268,11 @@ msgstr "Minden tevékenység dátuma ennek a Típusnak"
 
 #: CRM/Report/Form/Case/Detail.php
 msgid "Total Number of Cases "
-msgstr "Összeg Ügyek Száma"
+msgstr "Ügyek Száma összesen"
 
 #: CRM/Report/Form/Case/Detail.php
 msgid "Total Number of Countries "
-msgstr "Összeg Ország Száma"
+msgstr "Országok Száma összesen"
 
 #: CRM/Report/Form/Case/Detail.php
 msgid "View Details of Case."
@@ -304,7 +304,7 @@ msgstr "Ahhoz hogy Munkatársra vagy Kapcsolatra keressen, kérem válassza ki a
 
 #: CRM/Report/Form/Case/TimeSpent.php
 msgid "Totals Only"
-msgstr "Csak összegek"
+msgstr "Összesenek csak"
 
 #: CRM/Report/Form/Case/TimeSpent.php
 msgid "Month/Year"
@@ -316,7 +316,7 @@ msgstr "# Tevékenységek"
 
 #: CRM/Report/Form/Case/TimeSpent.php
 msgid "To view totals please select all of activity id, date and duration."
-msgstr "Ahhoz hogy megtekintse az összeset kérem válaszzon ki minden tevékenység azonosítót, dátumot és időtartamot."
+msgstr "Ahhoz hogy megtekintse az összesent kérem válasszon ki minden tevékenység azonosítót, dátumot és időtartamot."
 
 #: CRM/Report/Form/Contact/CurrentEmployer.php
 msgid "Employer Name"
@@ -1367,7 +1367,7 @@ msgstr "Felajánlott összeg"
 
 #: CRM/Report/Form/Pledge/Detail.php CRM/Report/Form/Pledge/Summary.php
 msgid "Total Amount Paid"
-msgstr "Teljes kifizetett összeg"
+msgstr "Teljes fizetett összeg"
 
 #: CRM/Report/Form/Pledge/Detail.php
 msgid "Total No Pledges"
