--- a/po/fi_FI/campaign.po
+++ b/po/fi_FI/campaign.po
@@ -4,14 +4,15 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Pinja-Liina Jalkanen <pinjaliina@iki.fi>, 2016
+# Tero Kankaanperä <tero@terokankaanpera.fi>, 2017
 # Tomi Toivio <tomi@sange.fi>, 2013
 # Tomi Toivio <tomi@sange.fi>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-09 14:59+0000\n"
-"Last-Translator: Pinja-Liina Jalkanen <pinjaliina@iki.fi>\n"
+"PO-Revision-Date: 2017-01-11 09:03+0000\n"
+"Last-Translator: Tero Kankaanperä <tero@terokankaanpera.fi>\n"
 "Language-Team: Finnish (http://www.transifex.com/civicrm/civicrm/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,11 +22,11 @@ msgstr ""
 
 #: CRM/Campaign/BAO/Campaign.php
 msgid "Current Campaigns"
-msgstr ""
+msgstr "Nykyiset kampanjat"
 
 #: CRM/Campaign/BAO/Campaign.php
 msgid "Past Campaigns"
-msgstr ""
+msgstr "Aiemmat kampanjat"
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "No survey sid parameter. Cannot process signature."
@@ -37,19 +38,19 @@ msgstr ""
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Survey - %1"
-msgstr ""
+msgstr "Kysely - %1"
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Survey Status - %1"
-msgstr ""
+msgstr "Kyselyn tila - %1"
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Survey Interviewer - %1"
-msgstr ""
+msgstr "Kyselyn haastattelija - %1"
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Interviewer"
-msgstr ""
+msgstr "Haastattelija"
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Could not find survey for %1 respondents."
@@ -57,7 +58,7 @@ msgstr ""
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Campaigns %1"
-msgstr ""
+msgstr "Kampanjat %1"
 
 #: CRM/Campaign/BAO/Survey.php CRM/Campaign/Form/Task/Reserve.php
 #: CRM/Campaign/Page/Vote.php CRM/Campaign/Task.php
@@ -99,35 +100,35 @@ msgstr ""
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Is Campaign Active?"
-msgstr ""
+msgstr "Onko kampanja aktiivinen?"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Created By"
-msgstr ""
+msgstr "Kampanjan loi"
 
 #: CRM/Campaign/DAO/Campaign.php CRM/Campaign/DAO/Survey.php
 msgid "Campaign Created Date"
-msgstr ""
+msgstr "Kampanjan luontipäivä"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Modified By"
-msgstr ""
+msgstr "Kampanjaa muokkasi"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Modified Date"
-msgstr ""
+msgstr "Kampanjan muokkauspäivä"
 
 #: CRM/Campaign/DAO/Campaign.php CRM/Campaign/Form/Campaign.php
 msgid "Campaign Goals"
-msgstr ""
+msgstr "Kampanjan tavoitteet"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Goal Revenue"
-msgstr ""
+msgstr "Tuottotavoite"
 
 #: CRM/Campaign/DAO/Survey.php templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Survey ID"
-msgstr ""
+msgstr "Kysely ID"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Campaign ID"
@@ -163,23 +164,23 @@ msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Created By"
-msgstr ""
+msgstr "Kyselyn loi"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Modified"
-msgstr ""
+msgstr "Kyselyä muokattu"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Modified On"
-msgstr ""
+msgstr "Kyselyn muokkauspäivä"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "No Email Verification"
-msgstr ""
+msgstr "Ei sähköpostivarmistusta"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Edit Campaign"
-msgstr ""
+msgstr "Muokkaa kampanjaa"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "- select Parent -"
@@ -187,11 +188,11 @@ msgstr ""
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Revenue Goal"
-msgstr ""
+msgstr "Tuottotavoite"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Campaign has been deleted."
-msgstr ""
+msgstr "Kampanja on poistettu."
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Campaign %1 has been saved."
@@ -205,7 +206,7 @@ msgstr "Voit lisätä uuden kampanjan."
 #: CRM/Campaign/Form/Task/Interview.php CRM/Campaign/Form/Task/Release.php
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Survey(s)"
-msgstr ""
+msgstr "Kysely(t)"
 
 #: CRM/Campaign/Form/Gotv.php
 msgid "GOTV (Voter Tracking)"
@@ -215,32 +216,32 @@ msgstr ""
 msgid ""
 "Oops. It looks like no surveys have been created. <a href='%1'>Click here to"
 " create a new survey.</a>"
-msgstr ""
+msgstr "Hups. Näyttää siltä että yhtään kyselyä ei ole luotu. <a href=\"%1\">Napsauta tästä luodaksesi uusi kysely.</a>"
 
 #: CRM/Campaign/Form/Gotv.php CRM/Campaign/Form/Task/Interview.php
 msgid "Could not find Survey."
-msgstr ""
+msgstr "Kyselyä ei löytynyt."
 
 #: CRM/Campaign/Form/Petition/Signature.php
 msgid "Sign the Petition"
-msgstr ""
+msgstr "Allekirjoita vetoomus"
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Edit Survey"
-msgstr ""
+msgstr "Muokkaa kyselyä"
 
 #: CRM/Campaign/Form/Petition.php CRM/Campaign/Form/Survey/Delete.php
 #: CRM/Campaign/Page/DashBoard.php CRM/Campaign/Page/Survey.php
 msgid "Delete Survey"
-msgstr ""
+msgstr "Poista kysely"
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Edit Petition"
-msgstr ""
+msgstr "Muokkaa vetoomusta"
 
 #: CRM/Campaign/Form/Petition.php CRM/Campaign/Page/DashBoard.php
 msgid "Delete Petition"
-msgstr ""
+msgstr "Poista vetoomus"
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Petition Dashboard"
@@ -248,7 +249,7 @@ msgstr ""
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Petition Title"
-msgstr ""
+msgstr "Vetoomuksen otsikko"
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Contact Profile"
@@ -260,11 +261,11 @@ msgstr ""
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Bypass email confirmation"
-msgstr ""
+msgstr "Ohita sähköpostivahvistus"
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Is Default?"
-msgstr ""
+msgstr "On oletusarvo?"
 
 #: CRM/Campaign/Form/Petition.php
 msgid ""
@@ -280,43 +281,43 @@ msgstr ""
 
 #: CRM/Campaign/Form/Petition.php
 msgid " Petition has been deleted."
-msgstr ""
+msgstr "Vetoomus on poistettu."
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Petition has been saved."
-msgstr ""
+msgstr "Vetoomus on tallennettu."
 
 #: CRM/Campaign/Form/Petition.php
 msgid " You can add another Petition."
-msgstr ""
+msgstr "Voit lisätä toisen vetoomuksen."
 
 #: CRM/Campaign/Form/Search/Campaign.php
 msgid "Find Campaigns"
-msgstr ""
+msgstr "Etsi kampanjoita"
 
 #: CRM/Campaign/Form/Search/Petition.php
 msgid "Find Petition"
-msgstr ""
+msgstr "Etsi vetoomus"
 
 #: CRM/Campaign/Form/Search/Survey.php
 msgid "Find Survey"
-msgstr ""
+msgstr "Etsi kysely"
 
 #: CRM/Campaign/Form/Search.php
 msgid "Find Respondents To %1"
-msgstr ""
+msgstr "Etsi %1 vastaajat"
 
 #: CRM/Campaign/Form/Search.php CRM/Campaign/Form/Task/Interview.php
 msgid "Record %1 Responses"
-msgstr ""
+msgstr "Tallenna %1 vastausta"
 
 #: CRM/Campaign/Form/Search.php
 msgid "Find Respondents"
-msgstr ""
+msgstr "Etsi vastaajia"
 
 #: CRM/Campaign/Form/Survey/Delete.php
 msgid "'%1' survey has been deleted."
-msgstr ""
+msgstr "\"%1\" kysely on poistettu."
 
 #: CRM/Campaign/Form/Survey/Delete.php
 msgid "Delete action is missing expected survey ID."
@@ -332,7 +333,7 @@ msgstr ""
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Instructions for interviewers"
-msgstr ""
+msgstr "Ohjeet haastattelijoille"
 
 #: CRM/Campaign/Form/Survey/Main.php
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
@@ -374,19 +375,19 @@ msgstr ""
 #: CRM/Campaign/Form/Survey/Questions.php
 #: CRM/Campaign/Form/Survey/TabHeader.php
 msgid "Questions"
-msgstr ""
+msgstr "Kysymykset"
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Create new result set"
-msgstr ""
+msgstr "Luo uusi tulosjoukko"
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Use existing result set"
-msgstr ""
+msgstr "Käytä olemassa olevaa tulosjoukkoa"
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Select Result Set"
-msgstr ""
+msgstr "Valitse tulosjoukko"
 
 #: CRM/Campaign/Form/Survey/Results.php
 #: templates/CRM/Campaign/Form/ResultOptions.tpl
@@ -400,7 +401,7 @@ msgstr ""
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Please select a Survey Result Set."
-msgstr ""
+msgstr "Ole hyvä ja valitse kyselyn tulosjoukko."
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "A Survey Detail Report <a href='%1'>%2</a> has been created."
@@ -416,7 +417,7 @@ msgstr ""
 
 #: CRM/Campaign/Form/Survey.php
 msgid "'%1' have been saved."
-msgstr ""
+msgstr "\"%1\" on tallennettu."
 
 #: CRM/Campaign/Form/SurveyType.php
 msgid "Selected Survey type has been deleted."
@@ -428,7 +429,7 @@ msgstr ""
 
 #: CRM/Campaign/Form/Task/Interview.php
 msgid "Could not find Interviewer."
-msgstr ""
+msgstr "Haastattelijaa ei löytynyt."
 
 #: CRM/Campaign/Form/Task/Interview.php
 msgid "No respondents are currently reserved for you to interview."
@@ -518,7 +519,7 @@ msgstr ""
 #: CRM/Campaign/Form/Task/Reserve.php
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "Reserve"
-msgstr ""
+msgstr "Varaa"
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Reserve and Interview"
