po: update po/nl_NL/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/contribute.po
+++ b/po/nl_NL/contribute.po
@@ -6,7 +6,7 @@
 # brouwser <brouwer@ee-atwork.nl>, 2013
 # brouwser <brouwer@ee-atwork.nl>, 2013
 # Geert Buyse <geert.buyse@chiro.be>, 2016
-# HanV <han.velthuis@home.nl>, 2013-2016
+# HanV <han.velthuis@home.nl>, 2013-2017
 # HanV <han.velthuis@home.nl>, 2011-2012
 # HanV <han.velthuis@home.nl>, 2011
 # janharmen <jan-harmen@hotmail.com>, 2011
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-10 15:57+0000\n"
+"PO-Revision-Date: 2017-01-11 13:32+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -5002,12 +5002,12 @@ msgstr "Alle periodieke bijdragen ongeacht de betalingen"
 #: CRM/Contribute/DAO/Contribution.php CRM/Contribute/Form/Contribution.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl
 msgid "Revenue Recognition Date"
-msgstr ""
+msgstr "Datum inkomsten-verantwoording"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Adjust Recurring Start Date"
-msgstr ""
+msgstr "Wijzigen periodieke startdatum"
 
 #: CRM/Contribute/DAO/ContributionProduct.php
 msgid "Contribution Product ID"
@@ -5087,19 +5087,19 @@ msgstr "Kleur startpagina-link"
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "-select product-"
-msgstr ""
+msgstr "-selecteer product-"
 
 #: CRM/Contribute/Form/CloseAccPeriod.php
 msgid "Accounting Period to Close"
-msgstr ""
+msgstr "Boekhoudperiode afsluiten"
 
 #: CRM/Contribute/Form/CloseAccPeriod.php
 msgid "Are you sure you want to close accounting period?"
-msgstr ""
+msgstr "Weet u zeker dat u de boekhoudperiode wilt afsluiten?"
 
 #: CRM/Contribute/Form/CloseAccPeriod.php
 msgid "Accounting Period has been closed successfully!"
-msgstr ""
+msgstr "Boekhoudperiode is afgesloten!"
 
 #: CRM/Contribute/Form/Contribution/Confirm.php
 msgid "Payment Processor Error message :"
@@ -5111,7 +5111,7 @@ msgstr "Online bijdrage:"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Returning since contribution has already been handled."
-msgstr ""
+msgstr "Gestopt, omdat de bijdrage al eerder is verwerkt."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid ""
@@ -5130,7 +5130,7 @@ msgstr "U kunt bij later betalen niet automatisch verlengen."
 #: CRM/Contribute/Form/Contribution.php CRM/Contribute/Selector/Search.php
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid "Pay with Credit Card"
-msgstr ""
+msgstr "Betalen met creditcard"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Transaction ID for the refund payment"
@@ -5138,7 +5138,7 @@ msgstr "Transactie-id van de terugbetaling"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Month and Year are required field for Revenue Recognition."
-msgstr ""
+msgstr "Maand en Jaar zijn verplichte velden bij de inkomsten-verantwoording."
 
 #: CRM/Contribute/Form/Contribution.php
 msgid ""
@@ -5159,27 +5159,27 @@ msgstr "Vernieuw mijn lidmaatschap automatisch."
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Specific Calendar Date"
-msgstr ""
+msgstr "Specifieke kalenderdatum"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Specific day of Month"
-msgstr ""
+msgstr "Specifieke dag van de maand"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Day of Contribution"
-msgstr ""
+msgstr "Dag van bijdrage"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Recurring Contribution Start Date Default"
-msgstr ""
+msgstr "Standaard startdatum periodieke bijdrage"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Allow Edits to Recurring Donation Start date?"
-msgstr ""
+msgstr "Wijzigen van periodieke startdatum toestaan?"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "The recurring start date cannot be prior to the current date."
-msgstr ""
+msgstr "De startdatum kan niet in het verleden liggen."
 
 #: CRM/Contribute/Form/Task/Batch.php CRM/Contribute/Form/Task/PickProfile.php
 #: CRM/Contribute/Task.php
@@ -5275,7 +5275,7 @@ msgstr "Bij dit %1 record zijn er geen betalingen gevonden"
 msgid ""
 "Recurring payment will be processed this day of the month following "
 "submission of this contribution page."
-msgstr ""
+msgstr "Een periodieke betaling zal worden verwerkt op deze dag van de maand nadat de bijdragepagina is ingevuld."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 msgid "Contributor Profiles"
