po: update po/sr_RS@latin/case.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/case.po
+++ b/po/sr_RS@latin/case.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-09 10:22+0000\n"
+"PO-Revision-Date: 2017-01-13 10:40+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -155,7 +155,7 @@ msgstr "Obrisani predmeti"
 
 #: CRM/Case/DAO/Case.php
 msgid "Case is in the Trash"
-msgstr ""
+msgstr "Premet je u kanti"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type ID"
@@ -167,7 +167,7 @@ msgstr "Ime tipa predmeta"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Title"
-msgstr ""
+msgstr "Naslov tipa predmeta"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Description"
@@ -195,7 +195,7 @@ msgstr "ID Predmeta nije pronađen."
 #: CRM/Case/Form/Activity/ChangeCaseStartDate.php
 #: CRM/Case/Form/Activity/LinkCases.php
 msgid "Expected one case-type"
-msgstr ""
+msgstr "Očekivani tip predmeta"
 
 #: CRM/Case/Form/Activity/ChangeCaseStartDate.php
 msgid "New Start Date"
@@ -274,7 +274,7 @@ msgid ""
 "The selected activity has been moved to the Trash. You can view and / or "
 "restore deleted activities by checking \"Deleted Activities\" from the Case "
 "Activities search filter (under Manage Case).<br />"
-msgstr ""
+msgstr "Odabrana aktivnost je pomerena u kantu. Možete pregledati i/ili povratiti obrisane aktivnosti tako što ćete uključiti \"obrisane aktivnosti\" u u filterima za pretragu aktivnosti predmeta (pod menadžmentom predmeta).<br />"
 
 #: CRM/Case/Form/Activity.php
 msgid "Selected Activity cannot be deleted."
@@ -432,9 +432,9 @@ msgstr "Obriši predmete"
 #: CRM/Case/Form/Task/Delete.php
 msgid "%count case moved to trash."
 msgid_plural "%count cases moved to trash."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%count predmet pomeren u kantu."
+msgstr[1] "%count predmeta pomereno u kantu."
+msgstr[2] "%count predmeta pomereno u kantu."
 
 #: CRM/Case/Form/Task/Delete.php
 msgid "%count case permanently deleted."
@@ -454,16 +454,16 @@ msgstr "Povrati predmet"
 #: CRM/Case/Form/Task/Restore.php
 msgid "%count case restored from trash."
 msgid_plural "%count cases restored from trash."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%count predmet povraćen iz kante."
+msgstr[1] "%count predmeta povraćeno iz kante."
+msgstr[2] "%count predmeta povraćeno iz kante."
 
 #: CRM/Case/Form/Task/Restore.php
 msgid "1 could not be restored."
 msgid_plural "%count could not be restored."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "1 predmet nije mogao biti povraćen."
+msgstr[1] "%count predmeta nije moglo biti povraćeno."
+msgstr[2] "%count predmeta nije moglo biti povraćeno."
 
 #: CRM/Case/Info.php
 msgid "CiviCase Engine"
@@ -527,7 +527,7 @@ msgstr "Moja uloga"
 
 #: CRM/Case/Selector/Search.php templates/CRM/Case/Page/DashboardSelector.tpl
 msgid "Most Recent"
-msgstr ""
+msgstr "Najnoviji"
 
 #: CRM/Case/Selector/Search.php templates/CRM/Case/Page/DashboardSelector.tpl
 msgid "Next Sched."
