po: update po/hu_HU/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/common-base.po
+++ b/po/hu_HU/common-base.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-10 16:09+0000\n"
+"PO-Revision-Date: 2017-01-13 07:49+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -15469,7 +15469,7 @@ msgstr "Keresés beállításai"
 
 #: templates/CRM/Contact/Form/Search/Criteria/ChangeLog.tpl
 msgid "Modified Between"
-msgstr "Módosítva között"
+msgstr "Dátumok között módosítva"
 
 #: templates/CRM/Contact/Form/Search/Criteria/ChangeLog.tpl
 msgid "Added Between"
@@ -21279,7 +21279,7 @@ msgstr "elektronikus pénzátutalás"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Completed"
-msgstr "Készen van"
+msgstr "Kész"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Cancelled"
