po: update po/sr_RS@latin/provinces.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/provinces.po
+++ b/po/sr_RS@latin/provinces.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-14 23:35+0000\n"
+"PO-Revision-Date: 2017-01-15 23:59+0000\n"
 "Last-Translator: Bojana Radulović <bojana@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -2580,7 +2580,7 @@ msgstr "Sanga-Mere"
 
 msgctxt "province"
 msgid "Vakaga"
-msgstr ""
+msgstr "Vakaga"
 
 msgctxt "province"
 msgid "Brazzaville"
@@ -2648,207 +2648,207 @@ msgstr "Bazel-Landsaft"
 
 msgctxt "province"
 msgid "Basel-Stadt"
-msgstr ""
+msgstr "Basel-Štad"
 
 msgctxt "province"
 msgid "Fribourg"
-msgstr ""
+msgstr "Friburg"
 
 msgctxt "province"
 msgid "Geneva"
-msgstr ""
+msgstr "Ženeva"
 
 msgctxt "province"
 msgid "Glarus"
-msgstr ""
+msgstr "Žlarus"
 
 msgctxt "province"
 msgid "Graubunden"
-msgstr ""
+msgstr "Graubinden"
 
 msgctxt "province"
 msgid "Jura"
-msgstr ""
+msgstr "Žura"
 
 msgctxt "province"
 msgid "Luzern"
-msgstr ""
+msgstr "Lucern"
 
 msgctxt "province"
 msgid "Neuchatel"
-msgstr ""
+msgstr "Nešatel"
 
 msgctxt "province"
 msgid "Nidwalden"
-msgstr ""
+msgstr "Nidvalden"
 
 msgctxt "province"
 msgid "Obwalden"
-msgstr ""
+msgstr "Obvalden"
 
 msgctxt "province"
 msgid "Sankt Gallen"
-msgstr ""
+msgstr "Sankt Galen"
 
 msgctxt "province"
 msgid "Schaffhausen"
-msgstr ""
+msgstr "Šafhauzen"
 
 msgctxt "province"
 msgid "Solothurn"
-msgstr ""
+msgstr "Zoloturn"
 
 msgctxt "province"
 msgid "Schwyz"
-msgstr ""
+msgstr "Švic"
 
 msgctxt "province"
 msgid "Thurgau"
-msgstr ""
+msgstr "Turgau"
 
 msgctxt "province"
 msgid "Ticino"
-msgstr ""
+msgstr "Tičino"
 
 msgctxt "province"
 msgid "Uri"
-msgstr ""
+msgstr "Uri"
 
 msgctxt "province"
 msgid "Vaud"
-msgstr ""
+msgstr "Vaud"
 
 msgctxt "province"
 msgid "Valais"
-msgstr ""
+msgstr "Valais"
 
 msgctxt "province"
 msgid "Zug"
-msgstr ""
+msgstr "Cug"
 
 msgctxt "province"
 msgid "Zurich"
-msgstr ""
+msgstr "Cirih"
 
 msgctxt "province"
 msgid "18 Montagnes"
-msgstr ""
+msgstr "18 Montanje"
 
 msgctxt "province"
 msgid "Agnebi"
-msgstr ""
+msgstr "Agnebi"
 
 msgctxt "province"
 msgid "Bas-Sassandra"
-msgstr ""
+msgstr "Bas-Sasandra"
 
 msgctxt "province"
 msgid "Denguele"
-msgstr ""
+msgstr "Dengele"
 
 msgctxt "province"
 msgid "Haut-Sassandra"
-msgstr ""
+msgstr "Haut-Sasandra"
 
 msgctxt "province"
 msgid "Lacs"
-msgstr ""
+msgstr "Laks"
 
 msgctxt "province"
 msgid "Lagunes"
-msgstr ""
+msgstr "Lagunes"
 
 msgctxt "province"
 msgid "Marahoue"
-msgstr ""
+msgstr "Marahue"
 
 msgctxt "province"
 msgid "Moyen-Comoe"
-msgstr ""
+msgstr "Mojen-Komoe"
 
 msgctxt "province"
 msgid "Nzi-Comoe"
-msgstr ""
+msgstr "Nci-Komoe"
 
 msgctxt "province"
 msgid "Savanes"
-msgstr ""
+msgstr "Savanes"
 
 msgctxt "province"
 msgid "Sud-Bandama"
-msgstr ""
+msgstr "Sud-Bandama"
 
 msgctxt "province"
 msgid "Sud-Comoe"
-msgstr ""
+msgstr "Sud-Komoe"
 
 msgctxt "province"
 msgid "Vallee du Bandama"
-msgstr ""
+msgstr "Vaje du Bandama"
 
 msgctxt "province"
 msgid "Worodouqou"
-msgstr ""
+msgstr "Voroduku"
 
 msgctxt "province"
 msgid "Zanzan"
-msgstr ""
+msgstr "Zanzan"
 
 msgctxt "province"
 msgid "Aisen del General Carlos Ibanez del Campo"
-msgstr ""
+msgstr "Ajsen generala Carlosa Ibaneza del Kampa"
 
 msgctxt "province"
 msgid "Antofagasta"
-msgstr ""
+msgstr "Antofagasta"
 
 msgctxt "province"
 msgid "Araucania"
-msgstr ""
+msgstr "Arajukanija"
 
 msgctxt "province"
 msgid "Atacama"
-msgstr ""
+msgstr "Atakama"
 
 msgctxt "province"
 msgid "Bio-Bio"
-msgstr ""
+msgstr "Bio-Bio"
 
 msgctxt "province"
 msgid "Coquimbo"
-msgstr ""
+msgstr "Kokimbo"
 
 msgctxt "province"
 msgid "Libertador General Bernardo O'Higgins"
-msgstr ""
+msgstr "Oslobodilac general Bernardo O'Higins"
 
 msgctxt "province"
 msgid "Los Lagos"
-msgstr ""
+msgstr "Los Lagos"
 
 msgctxt "province"
 msgid "Magallanes"
-msgstr ""
+msgstr "Magalanes"
 
 msgctxt "province"
 msgid "Maule"
-msgstr ""
+msgstr "Maule"
 
 msgctxt "province"
 msgid "Santiago Metropolitan"
-msgstr ""
+msgstr "Santijago Metropolitan"
 
 msgctxt "province"
 msgid "Tarapaca"
-msgstr ""
+msgstr "TarapaKa"
 
 msgctxt "province"
 msgid "Valparaiso"
-msgstr ""
+msgstr "Valparaiso"
 
 msgctxt "province"
 msgid "Adamaoua"
-msgstr ""
+msgstr "Adamuja"
 
 msgctxt "province"
 msgid "Centre"
@@ -2860,7 +2860,7 @@ msgstr "Istok"
 
 msgctxt "province"
 msgid "Far North"
-msgstr ""
+msgstr "Daleki Sever"
 
 msgctxt "province"
 msgid "North"
@@ -2992,7 +2992,7 @@ msgstr "Guangsi"
 
 msgctxt "province"
 msgid "Neia Mongol (mn)"
-msgstr ""
+msgstr "Neja Mongol (mn)"
 
 msgctxt "province"
 msgid "Xinjiang"
@@ -3000,7 +3000,7 @@ msgstr "Sinkjang"
 
 msgctxt "province"
 msgid "Xizang"
-msgstr ""
+msgstr "Ksizang"
 
 msgctxt "province"
 msgid "Hong Kong"
@@ -3012,203 +3012,203 @@ msgstr "Makao"
 
 msgctxt "province"
 msgid "Distrito Capital de Bogotá"
-msgstr ""
+msgstr "Glavna oblast  Bogote"
 
 msgctxt "province"
 msgid "Amazonea"
-msgstr ""
+msgstr "Amazon"
 
 msgctxt "province"
 msgid "Antioquia"
-msgstr ""
+msgstr "Antikva"
 
 msgctxt "province"
 msgid "Arauca"
-msgstr ""
+msgstr "Arakuja"
 
 msgctxt "province"
 msgid "Atlántico"
-msgstr ""
+msgstr "Atlantik"
 
 msgctxt "province"
 msgid "Bolívar"
-msgstr ""
+msgstr "Bolivar"
 
 msgctxt "province"
 msgid "Boyacá"
-msgstr ""
+msgstr "Bojaca"
 
 msgctxt "province"
 msgid "Caldea"
-msgstr ""
+msgstr "Kaldea"
 
 msgctxt "province"
 msgid "Caquetá"
-msgstr ""
+msgstr "Žapura"
 
 msgctxt "province"
 msgid "Casanare"
-msgstr ""
+msgstr "Sasanare"
 
 msgctxt "province"
 msgid "Cauca"
-msgstr ""
+msgstr "Kausa"
 
 msgctxt "province"
 msgid "Cesar"
-msgstr ""
+msgstr "Cezar"
 
 msgctxt "province"
 msgid "Córdoba"
-msgstr ""
+msgstr "Kordoba"
 
 msgctxt "province"
 msgid "Cundinamarca"
-msgstr ""
+msgstr "Kundinamarka"
 
 msgctxt "province"
 msgid "Chocó"
-msgstr ""
+msgstr "Ćoko"
 
 msgctxt "province"
 msgid "Guainía"
-msgstr ""
+msgstr "Gujanija"
 
 msgctxt "province"
 msgid "Guaviare"
-msgstr ""
+msgstr "Guivare"
 
 msgctxt "province"
 msgid "La Guajira"
-msgstr ""
+msgstr "La Guahira"
 
 msgctxt "province"
 msgid "Magdalena"
-msgstr ""
+msgstr "Magdalena"
 
 msgctxt "province"
 msgid "Meta"
-msgstr ""
+msgstr "Meta"
 
 msgctxt "province"
 msgid "Nariño"
-msgstr ""
+msgstr "NariNJo"
 
 msgctxt "province"
 msgid "Norte de Santander"
-msgstr ""
+msgstr "Sever Santandera"
 
 msgctxt "province"
 msgid "Putumayo"
-msgstr ""
+msgstr "Putumajo"
 
 msgctxt "province"
 msgid "Quindio"
-msgstr ""
+msgstr "Kvindijo"
 
 msgctxt "province"
 msgid "Risaralda"
-msgstr ""
+msgstr "Risaralda"
 
 msgctxt "province"
 msgid "San Andrés, Providencia y Santa Catalina"
-msgstr ""
+msgstr "San Andrés, Provincija Južne Karoline "
 
 msgctxt "province"
 msgid "Santander"
-msgstr ""
+msgstr "Santander"
 
 msgctxt "province"
 msgid "Sucre"
-msgstr ""
+msgstr "Sukre"
 
 msgctxt "province"
 msgid "Tolima"
-msgstr ""
+msgstr "Tolima"
 
 msgctxt "province"
 msgid "Valle del Cauca"
-msgstr ""
+msgstr "Valje del Kauca"
 
 msgctxt "province"
 msgid "Vaupés"
-msgstr ""
+msgstr "Vaupes"
 
 msgctxt "province"
 msgid "Vichada"
-msgstr ""
+msgstr "Vičada"
 
 msgctxt "province"
 msgid "Alajuela"
-msgstr ""
+msgstr "Alažuela"
 
 msgctxt "province"
 msgid "Cartago"
-msgstr ""
+msgstr "Kartago"
 
 msgctxt "province"
 msgid "Guanacaste"
-msgstr ""
+msgstr "Kvanakaste"
 
 msgctxt "province"
 msgid "Heredia"
-msgstr ""
+msgstr "Heredija"
 
 msgctxt "province"
 msgid "Limon"
-msgstr ""
+msgstr "Limon"
 
 msgctxt "province"
 msgid "Puntarenas"
-msgstr ""
+msgstr "Puntarenas"
 
 msgctxt "province"
 msgid "San Jose"
-msgstr ""
+msgstr "San Hose"
 
 msgctxt "province"
 msgid "Camagey"
-msgstr ""
+msgstr "Kamagej"
 
 msgctxt "province"
 msgid "Ciego de `vila"
-msgstr ""
+msgstr "Sijego de vila"
 
 msgctxt "province"
 msgid "Cienfuegos"
-msgstr ""
+msgstr "Sjenfuegos"
 
 msgctxt "province"
 msgid "Ciudad de La Habana"
-msgstr ""
+msgstr "Grad Havana"
 
 msgctxt "province"
 msgid "Granma"
-msgstr ""
+msgstr "Granma"
 
 msgctxt "province"
 msgid "Guantanamo"
-msgstr ""
+msgstr "Gvantanamo"
 
 msgctxt "province"
 msgid "Holquin"
-msgstr ""
+msgstr "Holin"
 
 msgctxt "province"
 msgid "La Habana"
-msgstr ""
+msgstr "La Havana"
 
 msgctxt "province"
 msgid "Las Tunas"
-msgstr ""
+msgstr "Las Tunas"
 
 msgctxt "province"
 msgid "Matanzas"
-msgstr ""
+msgstr "Matanzas"
 
 msgctxt "province"
 msgid "Pinar del Rio"
-msgstr ""
+msgstr "PinJar del Rio"
 
 msgctxt "province"
 msgid "Sancti Spiritus"
