po: update po/ja_JP/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ja_JP/mailing.po
+++ b/po/ja_JP/mailing.po
@@ -6,14 +6,15 @@
 # Masaki Muranaka <monaka@monami-ya.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Satomi Sato <puritira2015@gmail.com>, 2015-2016
+# syuza <satoshi.yuza@gmail.com>, 2017
 # YASUDA Yukihiro <yukihiro@labornetjp.org>, 2012-2013
 # Yukihiro Yasuda <yasudayukihiro@gmail.com>, 2012,2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-16 02:07+0000\n"
+"Last-Translator: syuza <satoshi.yuza@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/civicrm/civicrm/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2514,7 +2515,7 @@ msgstr "開封 / クリック数"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Document Body"
-msgstr ""
+msgstr "Document Body"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Campaign %1 %2"
@@ -2630,4 +2631,4 @@ msgstr "注意 : この機能を有効にした場合、対象のページにリ
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Public url"
-msgstr ""
+msgstr "公開URL"
