po: update po/sr_RS@latin/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-13 15:55+0000\n"
+"PO-Revision-Date: 2017-01-16 05:29+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -425,7 +425,7 @@ msgstr ""
 
 #: CRM/ACL/Form/WordPress/Permissions.php
 msgid "Unsafe Permission Settings"
-msgstr ""
+msgstr "Nebezbedna podešavanja dozvola"
 
 #: CRM/ACL/Form/WordPress/Permissions.php
 msgid "Wordpress Access Control Updated"
@@ -574,15 +574,15 @@ msgstr "Status aktivnosti"
 #: CRM/Contact/Form/Search/Custom/ActivitySearch.php
 #: CRM/Contact/Form/Task/PDFLetterCommon.php CRM/Core/SelectValues.php
 msgid "Activity Subject"
-msgstr ""
+msgstr "Subjekat aktivnosti"
 
 #: CRM/Activity/BAO/Activity.php
 msgid "Activity Reporter"
-msgstr ""
+msgstr "Reporter aktivnovsti"
 
 #: CRM/Activity/BAO/Activity.php
 msgid "Activity Actual Date"
-msgstr ""
+msgstr "Datum aktivnosti"
 
 #: CRM/Activity/BAO/Activity.php
 msgid "Activity Scheduled Date"
@@ -785,11 +785,11 @@ msgstr "Lokacija"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Phone (called) ID"
-msgstr ""
+msgstr "ID telefona (poziv)"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Phone (called) Number"
-msgstr ""
+msgstr "Broj telefona (poziv)"
 
 #: CRM/Activity/DAO/Activity.php CRM/Activity/Form/Activity.php
 #: CRM/Contact/Form/Search/Custom/ActivitySearch.php
@@ -824,7 +824,7 @@ msgstr ""
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Original Activity ID "
-msgstr ""
+msgstr "Originalni ID aktivnosti"
 
 #: CRM/Activity/DAO/Activity.php CRM/Activity/Form/Activity.php
 msgid "Result"
@@ -832,7 +832,7 @@ msgstr "Rezultat"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Activity is in the Trash"
-msgstr ""
+msgstr "Aktivnost je u kanti"
 
 #: CRM/Activity/DAO/Activity.php CRM/Core/BAO/UFField.php
 #: CRM/UF/Form/Field.php templates/CRM/Activity/Form/ActivityView.tpl
