--- a/po/de_DE/mailing.po
+++ b/po/de_DE/mailing.po
@@ -25,14 +25,15 @@
 # Fabian <schuttenberg@systopia.de>, 2013
 # Fabian <schuttenberg@systopia.de>, 2013
 # ideenweberei <service@ideenweberei.com>, 2012
+# Thomas Schuettler, 2017
 # Wasilis Mandratzis <inactive+Wasilis@transifex.com>, 2013
 # Yvonne <yvonne.sedlatschek@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-21 13:50+0000\n"
-"Last-Translator: Philipp Michael <pminf@posteo.de>\n"
+"PO-Revision-Date: 2017-01-16 16:35+0000\n"
+"Last-Translator: Thomas Schuettler\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1080,7 +1081,7 @@ msgstr "Nicht beantwortete"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Mailings %%StatusMessage%%"
-msgstr "Rundschreiben %%StatusMeldung%%"
+msgstr "Rundschreiben %%StatusMessage%%"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Sent By"
