po: update po/sr_RS@latin/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/contribute.po
+++ b/po/sr_RS@latin/contribute.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-09 10:46+0000\n"
+"PO-Revision-Date: 2017-01-17 09:36+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -23,11 +23,11 @@ msgstr "transakcija je već obrađena."
 
 #: CRM/Contribute/BAO/Contribution/Utils.php
 msgid "ContributionProcessor: %1 API"
-msgstr ""
+msgstr "Procesor donacija: %1 API"
 
 #: CRM/Contribute/BAO/Contribution.php
 msgid "- Contribution Fields -"
-msgstr "- Polja - donacija -"
+msgstr "- Polja za donacije -"
 
 #: CRM/Contribute/BAO/Contribution.php
 msgid "Recurring Contributions ID"
@@ -652,7 +652,7 @@ msgstr ""
 msgid ""
 "You will need to configure the %1 settings for your Payment Processor before"
 " you can submit a credit card transactions."
-msgstr ""
+msgstr "Morate podesiti podešavanja %1 za vaš procesor uplate pre obavljanja transakcija sa kreditnim karticama."
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid "Pledge payment status should be 'Pending' or  'Overdue'."
@@ -1062,7 +1062,7 @@ msgstr "Razlog otkazivanja / refundiranja"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Payment Processor is a required field."
-msgstr ""
+msgstr "Procesor uplata je obavezno polje."
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "The sum of fee amount and net amount must be equal to total amount"
@@ -1080,11 +1080,11 @@ msgstr ""
 msgid ""
 "Transaction ID's must be unique. Transaction '%1' already exists in your "
 "database."
-msgstr ""
+msgstr "ID transakcija moraju biti unikatni. Transakcija '%1' već postoji u vašoj bazi podataka."
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "The contribution record has been saved."
-msgstr ""
+msgstr "Zapis o donaciji je sačuvan."
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Office Credit Card contribution"
@@ -1397,11 +1397,11 @@ msgstr ""
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid "Use a confirmation page?"
-msgstr ""
+msgstr "Koristi stranicu za potvrdu?"
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid "Is this Online Contribution Page Active?"
-msgstr ""
+msgstr "Da li je ova stranica za onlajn donacije aktivna?"
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid "Honoree Section Enabled"
@@ -1742,9 +1742,9 @@ msgstr ""
 #: CRM/Contribute/Form/Task/Delete.php
 msgid "%count contribution deleted."
 msgid_plural "%count contributions deleted."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%count donacija obrisana."
+msgstr[1] "%count donacije obrisane."
+msgstr[2] "%count donacija obrisano."
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid ""
