--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -7,6 +7,7 @@
 # altair118 <altair118@laposte.net>, 2014
 # SR71 <ben.alard@gmail.com>, 2012
 # Brice Lacomette <brice.lacomette@laposte.net>, 2015
+# Brodziak jean jacques <jj.brodziak@cpe31.com>, 2017
 # Bronner Matthieu <mat.bronner@hotmail.fr>, 2013
 # Paul Caranton <caranton.paul@gmail.com>, 2013
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011-2012
@@ -21,7 +22,7 @@
 # F Boot <f2boot@gmail.com>, 2012
 # fr rev <e2ffr02@hotmail.com>, 2015
 # jean-guy avelin <jga974@gmail.com>, 2013
-# Jean jacques BRODZIAK <jj.brodziak@cpe31.com>, 2016
+# Brodziak jean jacques <jj.brodziak@cpe31.com>, 2016
 # LittleMissGeek <inactive+LittleMissGeek@transifex.com>, 2011
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Mathieu Lu <mathieu@bidon.ca>, 2011-2012,2014
@@ -31,7 +32,7 @@
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2015-2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # ShevAbam, 2016
-# ShevAbam, 2016
+# ShevAbam, 2016-2017
 # SR71 <ben.alard@gmail.com>, 2012
 # tonthon <tonthon21@gmail.com>, 2011
 # tonthon <tonthon21@gmail.com>, 2011
@@ -46,8 +47,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-25 09:12+0000\n"
-"Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
+"PO-Revision-Date: 2017-01-17 17:36+0000\n"
+"Last-Translator: Brodziak jean jacques <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -378,7 +379,7 @@ msgstr "Actif ?"
 
 #: CRM/ACL/Form/ACL.php
 msgid "Please assign this permission to a Role."
-msgstr "Prière d'assigner cette permission à un rôle."
+msgstr "Veuillez assigner cette permission à un rôle."
 
 #: CRM/ACL/Form/ACL.php
 msgid "Only 'View' and 'Edit' operations are valid for this type of data"
@@ -390,7 +391,7 @@ msgstr "Vous devez sélectionner un groupe (ou TOUS les groupes)."
 
 #: CRM/ACL/Form/ACL.php
 msgid "Please select a Profile (or ALL Profiles)."
-msgstr "Veuillez sélectionner un profile (ou TOUS les profils)"
+msgstr "Veuillez sélectionner un profil (ou TOUS les profils)"
 
 #: CRM/ACL/Form/ACL.php
 msgid "Please select a set of Custom Data (or ALL Custom Data)."
@@ -426,7 +427,7 @@ msgstr "Le champ Rôle est obligatoire"
 #: templates/CRM/ACL/Page/EntityRole.tpl
 #: templates/CRM/Activity/Form/Task/Print.tpl
 msgid "Assigned to"
-msgstr "Assignée à"
+msgstr "Assigné à"
 
 #: CRM/ACL/Form/EntityRole.php CRM/Contact/Form/GroupContact.php
 #: CRM/Contact/Form/Search/Custom/PostalMailing.php
@@ -437,7 +438,7 @@ msgstr "- sélectionner un groupe -"
 
 #: CRM/ACL/Form/EntityRole.php
 msgid "Selected Entity Role has been deleted."
-msgstr "Lae rôle-entité sélectionné a été supprimé."
+msgstr "Le rôle-entité sélectionné a été supprimé."
 
 #: CRM/ACL/Form/WordPress/Permissions.php CRM/Activity/Form/Activity.php
 #: CRM/Activity/Form/Task/Batch.php CRM/Activity/Form/Task/FileOnCase.php
@@ -13182,11 +13183,11 @@ msgstr "Déverrouillé"
 
 #: ang/crmUi.js
 msgid "Step 1"
-msgstr ""
+msgstr "Etape 1"
 
 #: ang/crmUi.js
 msgid "Step 2"
-msgstr ""
+msgstr "Etape 2"
 
 #: ang/crmUi.js js/Common.js
 msgid "Are you sure you want to continue?"
@@ -13194,15 +13195,15 @@ msgstr "Êtes-vous sûr de vouloir continuer ?"
 
 #: ang/crmUi.js
 msgid "Are you sure you want to disable this?"
-msgstr ""
+msgstr "Etes-vous sûr(e) de vouloir désactiver ceci ?"
 
 #: ang/crmUi.js
 msgid "Disable %1?"
-msgstr ""
+msgstr "Désactiver %1 ?"
 
 #: ang/crmUi.js
 msgid "the record"
-msgstr ""
+msgstr "l'enregistrement"
 
 #: ang/crmUi.js
 msgid "Are you sure you want to revert this?"
@@ -26277,11 +26278,11 @@ msgstr ""
 
 #: js/jquery/jquery.dashboard.js
 msgid "\"%1\" Removed"
-msgstr ""
+msgstr "\"%1\" supprimé"
 
 #: js/model/crm.uf.js
 msgid "(Copy)"
-msgstr ""
+msgstr "(Copier)"
 
 #: templates/CRM/ACL/Header.tpl
 msgid ""
@@ -26376,7 +26377,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.tpl
 msgid "Preview Document"
-msgstr ""
+msgstr "Prévisualiser"
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.tpl
 msgid "Downloading..."
